fix: return picture field with s3 bucket name